Prevent wrapping of map marker label text.

--- a/scout/static/scout/css/mobile.scss
+++ b/scout/static/scout/css/mobile.scss
@@ -9,7 +9,7 @@ html.turbolinks-progress-bar::before {
 
 .map-label { background: none; color: #f9f9f9;
 
-    .marker-text { color: #000; margin-left: 8px; text-shadow: 0 0 2px #fff, 0 0 2px #fff; font-weight: bold; }
+    .marker-text { color: #000; margin-left: 8px; text-shadow: 0 0 2px #fff, 0 0 2px #fff; font-weight: bold; display: inline-block; white-space: nowrap;}
     .fa-cutlery:before { margin-left: 1.8px; }
 }
 
